--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ oauthlib==2.1.0
 Pillow==5.2.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+pyperclip==1.7.0
 PySocks==1.6.8
 python-decouple==3.1
 python-dotenv==0.9.1
