--- a/requirements.txt
+++ b/requirements.txt
@@ -1,28 +1,44 @@
+astroid==2.0.4
+autopep8==1.4
 certifi==2018.8.24
 chardet==3.0.4
 config==0.3.9
 confusable-homoglyphs==3.2.0
 dj-database-url==0.5.0
 Django==1.11
+django-bootstrap-form==3.4
 django-bootstrap3==11.0.0
 django-bootstrap4==0.0.7
+django-forms-bootstrap==3.1.0
+django-friendship==1.2.0
 django-heroku==0.3.1
+django-likes==0.1
 django-registration==2.4.1
+django-secretballot==1.0.0
 django-tinymce==2.7.0
 gunicorn==19.9.0
 idna==2.7
+isort==4.3.4
+lazy-object-proxy==1.3.1
+mccabe==0.6.1
 oauthlib==2.1.0
 Pillow==5.2.0
 psycopg2==2.7.5
 psycopg2-binary==2.7.5
+pycodestyle==2.4.0
+pylint==2.1.1
 pyperclip==1.7.0
 PySocks==1.6.8
+python-dateutil==2.7.3
 python-decouple==3.1
 python-dotenv==0.9.1
 pytz==2018.5
+pyuploadcare==2.5.0
 requests==2.19.1
 requests-oauthlib==1.0.0
 six==1.11.0
 tweepy==3.6.0
+typed-ast==1.1.0
 urllib3==1.23
 whitenoise==4.1
+wrapt==1.10.11
