--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ django-likes==0.1
 django-registration==2.4.1
 django-secretballot==1.0.0
 django-tinymce==2.7.0
+django-widget-tweaks==1.4.3
 gunicorn==19.9.0
 idna==2.7
 isort==4.3.4
